crates/sui-kv-rpc/src/v2/snapshots/sui_kv_rpc__v2__pin_tests__events__start_eq_end_asc.snap
---
source: crates/sui-kv-rpc/src/v2/pin_tests.rs
expression: output
---
#0 no-item | wm.cursor=boundary(cp=3,tx=4,ev=0) wm.cp=- | end=QUERY_END_REASON_CHECKPOINT_BOUND
